--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,15 @@
-window_period: 1m
+window_period: 10m
 top_retweets: 10
-refresh_time: 1s
 oauth:
     :consumer_key: LuYBRsTGTtZVY36wkwbmucqhC
     :consumer_secret: IXo5fVMDcZ2a7mHExP6Jd5AaaS2XxTZmPy3WkJM0ZJb11K9J5V
     :token: 14226885-l2XSi4eHVkTHrzlkyRwGXyrv0xthvB972Tc1JCksL
     :token_secret: ZBh74T4D5o205b3mCjwdpa7jM1QGQHA2ZQDFm6eTcFHwl
-
 server:
     :impl: thin
     :host: 0.0.0.0
     :port: 8181
-
 gui: web
+
+# config for console gui only
+refresh_time: 1s
